增加竞价信息